Few last updates to incorporate some additional columns and reformatting in the Additional Files

--- a/Analysis/parse_MODa.ipynb
+++ b/Analysis/parse_MODa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,6 +78,7 @@
     "    \n",
     "    # Fix some problematic text things \n",
     "    # NOTE THAT THESE MODIFY THE FILE IN-PLACE\n",
+    "    \n",
     "    parse_temp = tmp.NamedTemporaryFile()\n",
     "    p1 = subp.Popen(['perl','-pe','s/\\~/\\t/g',file],stdout=subp.PIPE)\n",
     "    p2 = subp.Popen(['perl','-pe','s/\\S+MURI_(\\S+?)\\.\\S+/$1/'],stdin=p1.stdout,stdout=subp.PIPE)\n",
@@ -96,23 +97,26 @@
     "\n",
     "    peptide: peptide seq w/ MODa annotation (string)\n",
     "    \"\"\"\n",
-    "    hit = re.search('\\w?\\.(\\w*)((\\+|-)\\d+)(\\w*)\\.\\w?',peptide)\n",
+    "    hit = re.search('(\\w?\\.)(\\w*)((\\+|-)\\d+)(\\w*)(\\.\\w?)',peptide)\n",
     "    full_pept = \"\"\n",
+    "    annot_pept = \"\"\n",
     "    modification = 0\n",
     "    modloc = -1\n",
     "    modres = '-'\n",
     "    if hit:\n",
-    "        full_pept=hit.group(1) + hit.group(4)\n",
-    "        modification = int(hit.group(2))\n",
-    "        modloc=len(hit.group(1)) - 1\n",
-    "        modres=hit.group(1)[-1]\n",
+    "        full_pept=hit.group(2) + hit.group(5)\n",
+    "        annot_pept=hit.group(1) + hit.group(2) + \"[\" + hit.group(3) + \"]\" + hit.group(5) + hit.group(6)\n",
+    "        modification = int(hit.group(3))\n",
+    "        modloc=len(hit.group(2)) - 1\n",
+    "        modres=hit.group(2)[-1]\n",
     "        if modres in constants.keys():\n",
     "            modification += constants[modres]\n",
     "    else:\n",
     "        pept_seq_search = re.search('\\w?\\.(\\w+)\\.\\w?',peptide)\n",
     "        full_pept=pept_seq_search.group(1)\n",
+    "        annot_pept=peptide\n",
     "        modification = 0\n",
-    "    return (full_pept,modification,modloc,modres)\n"
+    "    return (full_pept,annot_pept,modification,modloc,modres)\n"
    ]
   },
   {
@@ -125,28 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2527135, 12)\n",
-      "(2527135, 28)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print all_pept_raw.shape\n",
-    "print all_pept.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -170,23 +153,23 @@
       "3       0.1744              K.LAGDLETLR.S  254160296           219         227  \n",
       "4       0.1571              K.LAGDLETLR.S  254160296           219         227  \n",
       "proteins len: 4201\n",
-      "  DataSet  Index  ObservedMW  Charge  CalculatedMW  DeltaMass  Score  Probability          Peptide       giID  PeptideStart  PeptideEnd   Start    Stop Strand   GeneID Locus   LocusTag ProteinProduct_x  Length                                  ProteinName  Time  BiolRep  TechRep PeptideSeq  MassShift  ModifiedPosition ModifiedResidue\n",
-      "0    100a    128    986.5384       2      986.5396    -0.0013     23       0.3035    K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
-      "1    100a    164    986.5396       2      986.5396    -0.0000     21       0.1744    K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
-      "2    100a    167    986.5377       2      986.5396    -0.0019     22       0.1571    K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
-      "3    100a    173    987.5440       2      987.5396     0.0043     19       0.2249  K.L+1AGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          1                 0               L\n",
-      "4    100a    190    986.5389       2      986.5396    -0.0008     26       0.8113    K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n"
+      "  DataSet  Index  ObservedMW  Charge  CalculatedMW  DeltaMass  Score  Probability            Peptide       giID  PeptideStart  PeptideEnd   Start    Stop Strand   GeneID Locus   LocusTag ProteinProduct_x  Length                                  ProteinName  Time  BiolRep  TechRep PeptideSeq  MassShift  ModifiedPosition ModifiedResidue\n",
+      "0    100a    128    986.5384       2      986.5396    -0.0013     23       0.3035      K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
+      "1    100a    164    986.5396       2      986.5396    -0.0000     21       0.1744      K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
+      "2    100a    167    986.5377       2      986.5396    -0.0019     22       0.1571      K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
+      "3    100a    173    987.5440       2      987.5396     0.0043     19       0.2249  K.L[+1]AGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          1                 0               L\n",
+      "4    100a    190    986.5389       2      986.5396    -0.0008     26       0.8113      K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n"
      ]
     }
    ],
    "source": [
     "# parse the concatenated MODa file\n",
-    "all_pept_raw = parse_MODa(\"data/MURI_ALL.id.txt\")\n",
+    "all_pept_raw = parse_MODa(\"data/inputs/MURI_ALL.id.txt\")\n",
     "print all_pept_raw.head()\n",
     "\n",
     "# Load protein table and giID list\n",
-    "proteinTable = pd.read_csv(\"data/REL606_ProteinTable167_161539.txt\",sep=\"\\t\")\n",
-    "gi_ids = pd.read_csv(\"data/gi_to_name_list_shrt.txt\",sep=\"\\t\",header=None,names=['ProteinProduct','LocusTag','giID'])\n",
+    "proteinTable = pd.read_csv(\"data/inputs/REL606_ProteinTable167_161539.txt\",sep=\"\\t\")\n",
+    "gi_ids = pd.read_csv(\"data/inputs/gi_to_name_list_shrt.txt\",sep=\"\\t\",header=None,names=['ProteinProduct','LocusTag','giID'])\n",
     "\n",
     "# merge to build giID table\n",
     "proteins = pd.merge(proteinTable,gi_ids,on='LocusTag')\n",
@@ -209,9 +192,10 @@
     "\n",
     "# Extract modification info from MODa peptide sequence string\n",
     "pept_seqs = all_pept['Peptide']\n",
-    "pept_seqs,mods,modloc,modres = zip(*pept_seqs.apply(get_mod))\n",
+    "pept_seqs,pepts,mods,modloc,modres = zip(*pept_seqs.apply(get_mod))\n",
     "\n",
     "#Add modification info columns to all_pept\n",
+    "all_pept['Peptide'] = pd.Series(pepts)\n",
     "all_pept[\"PeptideSeq\"] = pd.Series(pept_seqs)\n",
     "all_pept[\"MassShift\"] = pd.Series(mods)\n",
     "all_pept[\"ModifiedPosition\"] = pd.Series(modloc)\n",
@@ -226,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -248,14 +232,14 @@
     "#\n",
     "# Output formats may vary if you use something else...\n",
     "\n",
-    "mono_MW = pd.read_csv(\"data/all_pept_monoMW.txt\",header=None,delim_whitespace=True,names=[\"PeptideSeq\",\"pI\",\"CalculatedUnmodMW\"])\n",
+    "mono_MW = pd.read_csv(\"data/inputs/all_pept_monoMW.txt\",header=None,delim_whitespace=True,names=[\"PeptideSeq\",\"pI\",\"CalculatedUnmodMW\"])\n",
     "mono_MW.drop(['pI'],axis=1,inplace=True)\n",
     "all_pept_calcMW = pd.merge(all_pept,mono_MW,on=\"PeptideSeq\",how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
